import java.awt.event.KeyListener;
import java.awt.event.KeyEvent;
public class KeyHandler implements KeyListener {
 public boolean upPressed, downPressed, leftPressed, rightPressed;
 @Override
 public void keyTyped(KeyEvent e) {
  // TODO Auto-generated method stub
  System.out.println("Key typed");
 }

 @Override
 public void keyPressed(KeyEvent e) {
     int code = e.getKeyCode();
     if(code == KeyEvent.VK_UP || code == KeyEvent.VK_W) {
         upPressed = true;
     }
     if(code == KeyEvent.VK_DOWN || code == KeyEvent.VK_S) {
            downPressed = true;
     }
     if(code == KeyEvent.VK_LEFT || code == KeyEvent.VK_A){
              leftPressed = true;
     }
     if(code == KeyEvent.VK_RIGHT || code == KeyEvent.VK_D) {
                  rightPressed = true;
     }
 }
 @Override
 public void keyReleased(KeyEvent e) {
  int code = e.getKeyCode();
  if(code == KeyEvent.VK_UP || code == KeyEvent.VK_W) {
   upPressed = false;
  }
  if(code == KeyEvent.VK_DOWN || code == KeyEvent.VK_S) {
   downPressed = false;
    }
  if(code == KeyEvent.VK_LEFT || code == KeyEvent.VK_A){
   leftPressed = false;
  }
  if(code == KeyEvent.VK_RIGHT || code == KeyEvent.VK_D) {
   rightPressed = false;
  }
 }

}
