package src.main.Characters;

public interface Movement {

    public void moveUp();

    public void moveDown();

    public void moveLeft();

    public void moveRight();
}
