package src.main.Characters;

public class NPC extends Character {
    public NPC() {
        super();
    }
}
