package src.main.Terrains;

public enum TerrainTypes {
    Path, Sand, HeavyWater, TallGrass, Grass, Water, Wall, Tree
}
