package src.main.Terrains;

public interface Visible {

    public void show();
}
