package src.main.Transports;

public class Boat extends Transport {
    public Boat() {
        super(2, "Boat");
    }
}
