package src.main.Transports;

public class Carpet extends Transport {
    public Carpet() {
        super(4, "Carpet");
    }
}
