package src.main.Transports;

public class Horse extends Transport {
    public Horse() {
        super(3, "Horse");
    }
}
