package src.main.Transports;

public class OnFoot extends Transport {
    public OnFoot() {
        super(1, "On Foot");
    }
}
